--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,7 @@
     ],
     "require": {
         "php": ">=7.1.0",
-        "nuwave/lighthouse": "^2.6||^3.0||dev-master",
-        "laravel/passport": "^7.0"
+        "nuwave/lighthouse": "^2.6||^3.0||dev-master"
     },
     "require-dev": {
         "phpunit/phpunit" : "7.*",
